# code_snippet

./: .gitignore  README.md
openssl_demo/: CMakeLists.txt
openssl_demo/examples/: Base64.cpp
util_demo/: CMakeLists.txt  CMakePresets.json  main.cpp
util_demo/examples/: SpdlogExample.cpp
vcpkg_demo/cmake_helloworld/: CMakeLists.txt  CMakePresets.json  vcpkg.json
windows_demo/: CMakeLists.txt  main.cpp
windows_demo/examples/: CreateThread.cpp  GetAdaptersInfo.cpp  Libloaderapi.cpp
windows_demo/examples/dll/: dllmain.cpp  main.cpp
